# coffee_forecast

./: .env.example  README.md  app.py  conftest.py  launch.bat  main.py  pyproject.toml  requirements.txt  run_app.sh
backtest/: walk_forward.py
backtesting/: metrics.py  walk_forward.py
config/: __init__.py  features.yaml  settings.py  sources.yaml
contracts/: __init__.py  interfaces.py  schemas.py
data/features/: evaluation_report.txt
experiment/: __init__.py  tracker.py
features/: base.py  climate_features.py  inventory_features.py  macro_features.py  pipeline.py  positioning_features.py  price_features.py  significance.py  store.py  volatility_features.py
ingestion/: base.py  climate.py  cot.py  csv_source.py  exog_fetcher.py  futures.py  fx.py  ico.py  registry.py  synthetic.py  usda.py
models/: base.py  bayesian_model.py  ensemble.py  forecast.py  garch_model.py  hmm_model.py  regime.py  sarimax_model.py  volatility.py
orchestration/: cli.py  pipeline.py
preprocessing/: cleaner.py
schemas/: types.py
tests/evaluation/: market_simulator.py  model_evaluation.py
tests/evaluation/results/: evaluation_report.txt  metrics_table.csv
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_schemas.py
visualization/: plots.py
viz/: plots.py
